--- a/charts/HomeBridge/Chart.yaml
+++ b/charts/HomeBridge/Chart.yaml
@@ -1,8 +1,10 @@
 apiVersion: v2
-name: HomeBridge
+name:  homebridge
 version: 0.1.0
-description: 'A Helm Chart for HomeBridge'
+description:  |
+    HomeBridge is a lightweight NodeJS server you can run on your home network that emulates the iOS HomeKit API. 
+    It supports Plugins, which are community-contributed modules that provide a basic bridge from HomeKit to various 3rd-party APIs provided by manufacturers of "smart home" devices.
 dependencies:
   - name: homebridge
-    version: 0.5.0
-    repository: https://homeenterpriseinc.github.io/helm-charts/
+    version: 7.5.2
+    repository: "oci://tccr.io/truecharts"
