--- a/charts/Prometheus-Grafana/Chart.yaml
+++ b/charts/Prometheus-Grafana/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: prometheus-grafana-stack
 version: 43.3.0
 dependencies:
-  - name: prometheus-stack
+  - name: kube-prometheus-stack
     repository: https://prometheus-community.github.io/helm-charts
     version: 43.1.3
