--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-.idea
+# Terraform
+*.tfstate
+*.tfstate.*
+crash.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+.terraform/
+
+# Jetbrains
+.idea/
